--- a/PNGCreator/PNGCreator/PNGCreator.csproj
+++ b/PNGCreator/PNGCreator/PNGCreator.csproj
@@ -11,6 +11,7 @@
     <PackageIcon>Mop.png</PackageIcon>
     <ApplicationIcon>Mop.ico</ApplicationIcon>
     <NoWin32Manifest>true</NoWin32Manifest>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
