--- a/PNGCreator/PNGCreator/PNGCreator.csproj
+++ b/PNGCreator/PNGCreator/PNGCreator.csproj
@@ -16,7 +16,7 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <PlatformTarget>AnyCPU</PlatformTarget>
-    <OutputPath>build\</OutputPath>
+    <OutputPath>builds\</OutputPath>
     <DebugType>none</DebugType>
     <DebugSymbols>false</DebugSymbols>
   </PropertyGroup>
